--- a/Simulador.html
+++ b/Simulador.html
@@ -30,8 +30,7 @@
 
     <main id="conteudo" class="container">
         <h1 class="col-xs-12">Simulador</h1>
-
-        <!--<div class="row">-->
+        <div class="row col-xs-12">
             <div class="col-xs-12 col-sm-6 col-md-3 ">
                 <select class="form-control select select-primary select-block mbl">
                     <optgroup label="Métodos Simples">
@@ -43,11 +42,11 @@
                 </select>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-3 ">
-                <input id="select-tamanho" type="number" min="1" max="10" placeholder="Tamanho do Vetor" class="form-control">
+                <input id="txt-tamanho" type="number" min="2" max="10" placeholder="Tamanho do Vetor" class="form-control" value="5">
             </div>
             <div class="col-xs-12 col-sm-3 col-md-2">
                 <label class="checkbox" for="chk-random">
-                    <input type="checkbox" value="" id="chk-random" data-toggle="checkbox" class="custom-checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
+                    <input type="checkbox" value="" id="chk-random" data-toggle="checkbox" checked class="custom-checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
                     Random
                 </label>
             </div>
@@ -58,12 +57,46 @@
                 </label>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-2">
-                <button class="btn btn-wide btn-primary">
+                <button class="col-xs-12 btn btn-wide btn-primary" onclick="Simular();">
                     Simular
                 </button>
             </div>
-            <!--</div>-->
-</main>
+        </div>
+
+        <div class="row col-xs-12">
+            <div class="col-xs-12 col-sm-6 col-md-6">
+                <div class="panel panel-default ">
+                    <div class="col-xs-12 panel-heading">
+                        <h3 class="col-xs-12 panel-title">Vetor</h3>
+                    </div>
+                    <div class="panel-body">
+                        <ul class="vetor">
+                            <li id="vet0" class="col-xs-1">-</li>
+                            <li id="vet1" class="col-xs-1">-</li>
+                            <li id="vet2" class="col-xs-1">-</li>
+                            <li id="vet3" class="col-xs-1">-</li>
+                            <li id="vet4" class="col-xs-1">-</li>
+                            <li id="vet5" class="col-xs-1">-</li>
+                            <li id="vet6" class="col-xs-1">-</li>
+                            <li id="vet7" class="col-xs-1">-</li>
+                            <li id="vet8" class="col-xs-1">-</li>
+                            <li id="vet9" class="col-xs-1">-</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-6">
+                <div class="panel panel-default ">
+                    <div class="col-xs-12 panel-heading">
+                        <h3 class="col-xs-12 panel-title">Código</h3>
+                    </div>
+                    <div class="panel-body">
+                        Panel content
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
     <br />
 
