Todos os métodos implementados + visualização do código

--- a/Simulador.html
+++ b/Simulador.html
@@ -63,7 +63,7 @@
             </div>
         </div>
 
-        <div class="row col-xs-12">
+        <div id="row-panels" class="row col-xs-12">
             <div class="col-xs-12 col-sm-6 col-md-6">
                 <div class="panel panel-default ">
                     <div class="col-xs-12 panel-heading">
@@ -90,8 +90,8 @@
                     <div class="col-xs-12 panel-heading">
                         <h3 class="col-xs-12 panel-title">Código</h3>
                     </div>
-                    <div class="panel-body">
-                        Em Desenvolvimento...
+                    <div id="panel-codigo" class="panel-body">
+                        <br />
                     </div>
                 </div>
             </div>
