--- a/Simulador.html
+++ b/Simulador.html
@@ -104,6 +104,25 @@
         <a id="texto-rodape" class="navbar-text navbar-link" href="#">Diego Siena Francisco</a>
     </nav>
 
+
+    <div id="modal-vetor" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Escolha os números:</h4>
+                </div>
+                <div id="modal-body-inputs" class="modal-body row">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-primary" onclick="ConcluirModal();">Concluir</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
     <script src="./flat-ui/js/vendor/jquery.min.js"></script>
     <script src="./flat-ui/js/flat-ui.min.js"></script>
     <script src="js/simulador.js"></script>
